--- a/app/src/main/res/layout/activity_tra_cuu.xml
+++ b/app/src/main/res/layout/activity_tra_cuu.xml
@@ -36,7 +36,7 @@
             <ImageView
                 android:id="@+id/image_view_avatar"
                 android:layout_gravity="right"
-                android:src="@drawable/button_camera"
+                android:src="@drawable/default_avatar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </TableRow>
