--- a/app/src/main/res/layout/camera_activity.xml
+++ b/app/src/main/res/layout/camera_activity.xml
@@ -43,7 +43,7 @@
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Chấm công" />
+                android:text="@string/string_cham_cong" />
             <RadioButton
                 android:layout_weight="1"
                 android:id="@+id/radioButton2"
