--- a/app/src/main/res/layout/dialog_error.xml
+++ b/app/src/main/res/layout/dialog_error.xml
@@ -9,11 +9,11 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:padding="10dp"
             android:id="@+id/image_notice"
-            android:src="@drawable/button_camera"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:src="@drawable/alert" />
         <TextView
             android:layout_toRightOf="@id/image_notice"
             android:layout_width="match_parent"
@@ -35,6 +35,7 @@
         android:text="Đây là nội dung cảnh báo lỗi"/>
     <Button
         android:layout_below="@+id/content"
+        android:id="@+id/button_dongy"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
